# Autonomou-Driving-Code-Paper

./: README.md  lqr_ga.py
Hybrid_A_Star/: CMakeLists.txt
can_module_movebase/: CMakeLists.txt  package.xml
can_module_movebase/include/: canthread1_move.h  controlcan.h  gl_data.h  input_subscriber.h  main_window.hpp  nonlinear_ctrl.h  pid.h  pure_pursuit.h  qrviz.h
can_module_movebase/include/can_module/: pure_pursuit.h  qnode.hpp
can_module_movebase/launch/: can_gui.launch
can_module_movebase/param/: car_status.yaml  pid.yaml
can_module_movebase/scripts/: mpc_ctrl.py
can_module_movebase/src/: ADRC_motor.cpp  canthread1.cpp  input_subscriber.cpp  main.cpp  main_window.cpp  nonlinear_ctrl.cpp  pid.cpp  pure_pursuit.cpp  qnode.cpp  qrviz.cpp
can_module_movebase/ui/: main_window.ui  main_window.ui.autosave
